<resources>
    <string name="app_name">Harlequin Helper</string>
    <string name="mealTime">Add Meal</string>
    <string name="napButton">Add Nap</string>
    <string name="pottyTime">Add Tinkle</string>
    <string name="mealViewText">Input Meal Details</string>
    <string name="meal_text_view">Meal Details</string>
    <string name="time_view">Enter Time (hh:mm)</string>
    <string name="time_text">Enter time hh:mm</string>
    <string name="mealTimeView">Enter time hh:mm</string>
    <string name="mealTimeEdit">Enter Time hh:mm</string>
    <string name="mealSaveButton">Save</string>
    <string name="pref_key">meals</string>
    <string name="Meals">Meals</string>
    <string name="napTimesList">Nap Times</string>
    <string name="toiletTrainingList">Potty Training</string>
    <string name="napTextView">Nap Details</string>
    <string name="napTimeEdit">Enter time hh:mm</string>
    <string name="napButtonSave">Save</string>
    <string name="napTimeEnter">Enter time hh:mm</string>
    <string name="pottyTextView">Potty Training Details</string>
    <string name="pottyTimeEdit">Enter Time hh:mm</string>
    <string name="napSaveButton">Save</string>
    <string name="mainPageTextHeader">Child Progress Tracker</string>
    <string name="childNameButton">Enter Child</string>
</resources>
